manifests/overlays/istio-ambient/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
