manifests/overlays/istio-ambient/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    istio.io/ingress-use-waypoint: "true"
  name: chatbot
