manifests/overlays/istio-ambient/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: chatbot-ext-authz
spec:
  targetRefs:
    - kind: Service
      group: ""
      name: chatbot
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: default-allow-all
spec:
  targetRefs:
    - kind: Service
      group: ""
      name: chatbot
